# scripts

./: .gitignore  AGENTS.md  LICENSE  README.md  chat.py  chat2.py  chatutils.py  fib.py  ftutils.py  gdrive.py  htm2md.py  langch1.py  mdbutils.py  page-parse.py  pd.py  pd2.py  plt.py  pydata.py  pyproject.toml  scdata.py  toolutils.py  trade-log.py  tsutils.py  twdata.py  yfdata.py
config/: bloomberg-cookies.json  ft-cookies.json  model-info.yaml  nyt-cookies.json  wsj-cookies.json
tests/: test_chatutils.py  test_fib.py  test_toolutils.py
